8200477: Integer dot product no longer autovectorised

Reviewed-by: kvn